--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,10 @@ pydantic==2.11.5
 python-dotenv==1.1.0
 tavily_python==0.7.0
 fastapi
+fastmcp
+mcp
 uvicorn
 rich
+psycopg2-binary
+langchain_postgres
+appwrite
