- chatbot migrated to supabase - chatbot client WIP - mcp works

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,8 @@ psycopg2-binary
 langchain_postgres
 appwrite
 psycopg-binary
+langchain-ollama
+pymupdf
+docx2txt
+supabase
+langchain-mcp-adapters
